--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.0'
 
+    //otp design
+   // implementation 'com.github.KevinSchildhorn:OTPView:0.2.5'
+  //  implementation 'com.github.aabhasr1:OtpView:v1.1.2'
+
 }
