--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.example.test'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.test"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -53,6 +53,12 @@ dependencies {
 
     //material design
     implementation 'com.google.android.material:material:1.7.0'
+
+    //Room
+    implementation "androidx.room:room-runtime:2.5.0"
+    annotationProcessor "androidx.room:room-compiler:2.5.0"
+
+
 
 //Retrofit & RxJava
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3'
