--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
 
     //material design
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.8.0'
 
     //Room
     implementation "androidx.room:room-runtime:2.5.0"
@@ -78,11 +78,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.2'
 
     //otp design
     //implementation 'com.github.mukeshsolanki:android-otpview-pinview:3.0.0'
    // implementation 'com.github.KevinSchildhorn:OTPView:0.2.5'
    implementation 'com.github.aabhasr1:OtpView:v1.1.2'
+
+    //volley
+    implementation 'com.android.volley:volley:1.2.1'
 
 }
