--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".fragments_activity.ActivityOfFragments"
+            android:name=".api_manager.TestActivity"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
@@ -45,12 +45,21 @@
 
         </activity>
         <activity
-            android:name=".MainActivity3"
+            android:name=".fragments_activity.ActivityOfFragments"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
 
+
+
+        </activity>
+        <activity
+            android:name=".MainActivity3"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
         <activity
             android:name=".location_gps.customer_location.CustomerLocationActivity"
