Details of Customer Api response success with details showing properly in DetailsOfCustomerActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -149,7 +149,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".npa_flow.DetailsOfCustomerActivity"
+            android:name=".npa_flow.details_of_customer.DetailsOfCustomerActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
