For PDF view Successfully viewable inside App - gradle.properties added enableJetifier

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,13 +36,13 @@ android {
 
 dependencies {
 
+    //Android studio Dolphin
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
 
     //ssp for texts
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
@@ -93,6 +93,9 @@ dependencies {
 
     //Google Places Api for getting Pinned Location Lat Long from Google Maps
     implementation 'com.google.android.gms:play-services-places:17.0.0'
+
+   //for PDF  view
+    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
 
 
 }
