--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     //sdp for widgets,edit_text etc.
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
+   // implementation 'com.github.bumptech.glide:glide:4.14.2'
 
     //material design
     implementation 'com.google.android.material:material:1.8.0'
