--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.5.0"
 
     //NavController
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+ //   implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+   // implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
 
 
 //Retrofit & RxJava
