--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:17.0.0'
 
    //for PDF  view
-    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
+   // implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
 
 
 }
