on Capture button click in DetailsOfCustomerAdapter Webview will redirect to GoogleMaps app and current device location will appear in search box of google maps

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,8 +93,10 @@ dependencies {
 
     //Google Places Api for getting Pinned Location Lat Long from Google Maps
     implementation 'com.google.android.gms:play-services-places:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
-   //for PDF  view
+
+    //for PDF  view
    // implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
 
 
