Google Maps Api key added in the bottom before </application> tag

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,10 +43,6 @@
                 android:value="" />
         </activity>
 
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDymn9B6l2_MnHSr6dI_jjZaXEeFWPn5vU" />
-
         <activity
             android:name=".view_products.OffersListActivity"
             android:exported="false">
@@ -389,6 +385,13 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <!--Google Maps Api key-->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDymn9B6l2_MnHSr6dI_jjZaXEeFWPn5vU" />
+
+
     </application>
 
 </manifest>
