--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     //for PDF  view
    // implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
 
-
+   //Jackson Library for date Serialize Deserialize purpose
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.1")
 
 }
