--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,13 +36,19 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".npa_flow.status_of_customer.StatusOfCustomerActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".google_maps.GoogleMapsActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".view_products.OffersListActivity"
             android:exported="false">
@@ -384,14 +390,10 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-
-        <!--Google Maps Api key-->
+        </activity> <!-- Google Maps Api key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDsqxiDX4Pqfn7NUYzKFS2Nn2H4W5ywtaQ" />
-
-
     </application>
 
 </manifest>
