Forgot MPin flow added , ResetMPinActivity added with Tabs  LoginWithOTPFragment , LoginWithUserCredentialsFragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".mPin.ResetMPinActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".npa_flow.SubmitCompletionActivityOfCustomer"
             android:exported="false">
             <meta-data
@@ -167,8 +174,6 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-
-
         </activity>
         <activity
             android:name=".npa_flow.NotSpokeToCustomerActivity"
@@ -392,7 +397,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".lead.LeadsActivity"
