DetailsOfCustomerActivity , onCLicking Call logo , Actual call will start and in finally block Intent to go to CallDetailOfCustomerActivity is called

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -359,7 +359,7 @@
         </activity>
         <activity
             android:name=".otp.OTPVerificationActivity"
-            android:exported="false">
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
