--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
     //Google Places Api for getting Pinned Location Lat Long from Google Maps
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    //for Direction Api
+    implementation 'com.google.maps.android:android-maps-utils:2.2.0'
+
 
 
     //for PDF  view
