--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,14 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.MANAGE_OWN_CALLS" />
+    <permission android:name="android.permission.QUERY_ALL_PACKAGES" />  <!--To access GoogleMaps for Android 11(R) & above-->
+
+    <!--To access GoogleMaps for Android 11(R) & above-->
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+        </intent>
+    </queries>
 
     <application
         android:allowBackup="true"
