--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
 
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.1.3'
+    }
+
 }
 
 plugins {
