--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,8 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:3.1.0'
     //implementation 'com.google.maps.android:polyutil:1.3.1'
     implementation 'com.google.maps:google-maps-services:0.18.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
 
 
     //for PDF  view
