--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
@@ -23,9 +23,9 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.MANAGE_OWN_CALLS" />
-    <permission android:name="android.permission.QUERY_ALL_PACKAGES" />  <!--To access GoogleMaps for Android 11(R) & above-->
 
-    <!--To access GoogleMaps for Android 11(R) & above-->
+    <permission android:name="android.permission.QUERY_ALL_PACKAGES" /> <!-- To access GoogleMaps for Android 11(R) & above -->
+    <!-- To access GoogleMaps for Android 11(R) & above -->
     <queries>
         <intent>
             <action android:name="android.intent.action.MAIN" />
@@ -44,6 +44,13 @@
         android:theme="@style/Theme.Test"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".npa_flow.nearby_customer.NearByCustomerListActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".fragment_visits_flow.VisitsFlowCallDetailsActivity"
             android:exported="false">
